kubernetes/jchinook-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jchinook-api-service
  namespace: java-app
spec:
  selector:
    app: jchinook-api
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
