kubernetes/jchinook-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jchinook-api-ingress
  namespace: java-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jchinook-api
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: jchinook-api-service
            port:
              number: 8080
